--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -127,6 +127,11 @@
     <add key="GetObtenerMedidores" value="api/catalogos/obtener/medidores" />
     <add key="GetListaMetodosPago" value="api/catalogos/consulta/metodospago" />
     <add key="GetListaUsoCFDI" value="api/catalogos/consulta/usocfdi" />
+    <add key="GetEgresos" value="api/catalogos/consulta/egresos" />
+    <add key="GetEgreso" value="api/catalogos/consulta/egreso/" />
+    <add key="PutModificaEgreso" value="api/catalogos/modifica/egreso" />
+    <add key="PostRegistraEgreso" value="api/catalogos/registra/egreso" />
+    <add key="PutEliminaEgreso" value="api/catalogos/elimina/egreso/" />
     <!--Catalogos-->
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
