--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Controllers\PuntoVentaController.cs" />
     <Compile Include="Controllers\RecargaCombustiblesController.cs" />
     <Compile Include="Controllers\RemanenteController.cs" />
+    <Compile Include="Controllers\ReportesController.cs" />
     <Compile Include="Controllers\RequisicionController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\Shared\MainController.cs" />
@@ -401,6 +402,8 @@
     <Compile Include="Models\Pedidos\PedidoDetalleDto.cs" />
     <Compile Include="Models\Pedidos\PedidoModel.cs" />
     <Compile Include="Models\Pedidos\RegistrarPedidoModel.cs" />
+    <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarDTO.cs" />
+    <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
@@ -11640,6 +11643,7 @@
     <Content Include="Views\Shared\EditorTemplates\YearsDTO.cshtml" />
     <Content Include="Views\Egreso\Index.cshtml" />
     <Content Include="Views\Egreso\_EgresosPartial.cshtml" />
+    <Content Include="Views\Reportes\CuentasXPagar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
