--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -267,7 +267,9 @@
     <add key="GetYears" value="api/historico/consultar/years" />
     <add key="GetYearsTotales" value="api/historico/consultar/yearstotales"/> 
     <!-- HistoricoVentas -->
-
+    <!--Reportes-->
+    <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
+    <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
