--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -405,6 +405,7 @@
     <Compile Include="Models\Pedidos\RegistrarPedidoModel.cs" />
     <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarDTO.cs" />
     <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarModel.cs" />
+    <Compile Include="Models\Reporte\TiposReporteConst.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
@@ -11645,7 +11646,7 @@
     <Content Include="Views\Egreso\Index.cshtml" />
     <Content Include="Views\Egreso\_EgresosPartial.cshtml" />
     <Content Include="Views\Reportes\CuentasXPagar.cshtml" />
-    <Content Include="Views\Reportes\_CuentasPorPagarPartial.cshtml" />
+    <Content Include="Views\Reportes\_CuboDeInformacionPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
