--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -269,6 +269,7 @@
     <!-- HistoricoVentas -->
     <!--Reportes-->
     <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
+    <add key="PostInventarioPorPuntoVenta" value="api/reportes/inventarioxpuntoventa" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
