--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.6Utilities/Utilities.MainModule/Utilities.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.6Utilities/Utilities.MainModule/Utilities.MainModule.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculosGenerales.cs" />
     <Compile Include="Convertir.cs" />
     <Compile Include="DatosPlantilla.cs" />
     <Compile Include="FechasFunciones.cs" />
