JSA - Avance Reporte Historico precio venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -270,6 +270,7 @@
     <!--Reportes-->
     <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
     <add key="PostInventarioPorPuntoVenta" value="api/reportes/inventarioxpuntoventa" />
+    <add key="PostHistorioPrecios" value="api/reportes/historicoprecios" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
