--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -180,12 +180,18 @@
     <Compile Include="DTOs\Pedidos\PedidoDetalleDto.cs" />
     <Compile Include="DTOs\Pedidos\PedidoModelDto.cs" />
     <Compile Include="DTOs\Pedidos\RegistraPedidoDto.cs" />
+    <Compile Include="DTOs\Reportes\CallCenter\CallCenterDTO.cs" />
+    <Compile Include="DTOs\Reportes\CallCenter\RepCallCenterDTO.cs" />
     <Compile Include="DTOs\Reportes\CuentaPorPagar\CuentasPorPagarDTO.cs" />
     <Compile Include="DTOs\Reportes\HistoriocoPrecio\HistoricoPrecioDTO.cs" />
     <Compile Include="DTOs\Reportes\HistoriocoPrecio\RepHistorioPrecioDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioPuntoVenta\InventarioPorPuntoVentaDTO.cs" />
     <Compile Include="DTOs\Reportes\CuentaPorPagar\RepCuentaPorPagarDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioPuntoVenta\RepInventarioPorPuntoVentaDTO.cs" />
+    <Compile Include="DTOs\Reportes\OrdenCompra\OrdenCompraModelDTO.cs" />
+    <Compile Include="DTOs\Reportes\OrdenCompra\RepOrdenCompraDTO.cs" />
+    <Compile Include="DTOs\Reportes\Requisicion\RepRequisicionDTO.cs" />
+    <Compile Include="DTOs\Reportes\Requisicion\RequisicionDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionSalidaDTO.cs" />
     <Compile Include="DTOs\EquipoTransporte\TransporteDTO.cs" />
     <Compile Include="DTOs\Ventas\CajaGeneralDTO.cs" />
