--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -271,6 +271,10 @@
     <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
     <add key="PostInventarioPorPuntoVenta" value="api/reportes/inventarioxpuntoventa" />
     <add key="PostHistorioPrecios" value="api/reportes/historicoprecios" />
+    <add key="PostCallCenter" value="api/reportes/callcenter" />
+    <add key="PostRequisicion" value="api/reportes/requisicion" />
+    <add key="PostOrdenCompra" value="api/reportes/ordencompra" />
+    
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
