--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -346,11 +346,13 @@
     <Compile Include="IRepositorios\IUsuarioRepositorio.cs" />
     <Compile Include="ObjetosValor\Constantes\AlmacenGasConst.cs" />
     <Compile Include="ObjetosValor\Constantes\AlmacenConst.cs" />
+    <Compile Include="ObjetosValor\Constantes\EstatusPedidoConst.cs" />
     <Compile Include="ObjetosValor\Constantes\FacturacionConst.cs" />
     <Compile Include="ObjetosValor\Constantes\IngresoGastoConst.cs" />
     <Compile Include="ObjetosValor\Constantes\MetodoPagoConst.cs" />
     <Compile Include="ObjetosValor\Constantes\NotificacionPushConst.cs" />
     <Compile Include="ObjetosValor\Constantes\TipoEventoConst.cs" />
+    <Compile Include="ObjetosValor\Constantes\TipoVehiculoConst.cs" />
     <Compile Include="ObjetosValor\Enum\CalibracionDestinoEnum.cs" />
     <Compile Include="ObjetosValor\Enum\enumIVA.cs" />
     <Compile Include="ObjetosValor\Enum\EstatusPedidoEnum.cs" />
