--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -273,7 +273,8 @@
     <add key="PostHistorioPrecios" value="api/reportes/historicoprecios" />
     <add key="PostCallCenter" value="api/reportes/callcenter" />
     <add key="PostRequisicion" value="api/reportes/requisicion" />
-    <add key="PostOrdenCompra" value="api/reportes/ordencompra" />    
+    <add key="PostOrdenCompra" value="api/reportes/ordencompra" />
+    <add key="PostRendimientoVehicular" value="api/reportes/rendimientovehicular" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
