--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -275,6 +275,7 @@
     <add key="PostRequisicion" value="api/reportes/requisicion" />
     <add key="PostOrdenCompra" value="api/reportes/ordencompra" />
     <add key="PostRendimientoVehicular" value="api/reportes/rendimientovehicular" />
+    <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
