JSA - Historico vs Ventas
Terminado

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11670,6 +11670,7 @@
     <Content Include="Views\Reportes\OrdenCompraRep.cshtml" />
     <Content Include="Views\Reportes\RendimientoVehicular.cshtml" />
     <Content Include="Views\Reportes\InventarioXConcepto.cshtml" />
+    <Content Include="Views\Reportes\HistoricoVsVentas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
