--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -218,28 +218,28 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Servicios\AccesoADatos\AbonosDataAcces.cs" />
+    <Compile Include="AccesoADatos\AbonosDataAcces.cs" />
     <Compile Include="Flujos\Pedidos.cs" />
-    <Compile Include="Servicios\AccesoADatos\AlmacenEntradaProductoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\AlmacenSalidaProductoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\AsigancionUtilitariosDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CajaGeneralDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CamionetaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CFDIDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CombustibleDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\DataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\EgresoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\HistoricoDataAcces.cs" />
-    <Compile Include="Servicios\AccesoADatos\IngresoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\MantenimientoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\MantenimientoDetDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\MetodoPagoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\OrdenCompraProductoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\PedidosDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\PipaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\RecargaCombustibleDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\UsoCFDIDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\VehiculoUtilitarioDataAccess.cs" />
+    <Compile Include="AccesoADatos\AlmacenEntradaProductoDataAccess.cs" />
+    <Compile Include="AccesoADatos\AlmacenSalidaProductoDataAccess.cs" />
+    <Compile Include="AccesoADatos\AsigancionUtilitariosDataAccess.cs" />
+    <Compile Include="AccesoADatos\CajaGeneralDataAccess.cs" />
+    <Compile Include="AccesoADatos\CamionetaDataAccess.cs" />
+    <Compile Include="AccesoADatos\CFDIDataAccess.cs" />
+    <Compile Include="AccesoADatos\CombustibleDataAccess.cs" />
+    <Compile Include="AccesoADatos\DataAccess.cs" />
+    <Compile Include="AccesoADatos\EgresoDataAccess.cs" />
+    <Compile Include="AccesoADatos\HistoricoDataAcces.cs" />
+    <Compile Include="AccesoADatos\IngresoDataAccess.cs" />
+    <Compile Include="AccesoADatos\MantenimientoDataAccess.cs" />
+    <Compile Include="AccesoADatos\MantenimientoDetDataAccess.cs" />
+    <Compile Include="AccesoADatos\MetodoPagoDataAccess.cs" />
+    <Compile Include="AccesoADatos\OrdenCompraProductoDataAccess.cs" />
+    <Compile Include="AccesoADatos\PedidosDataAccess.cs" />
+    <Compile Include="AccesoADatos\PipaDataAccess.cs" />
+    <Compile Include="AccesoADatos\RecargaCombustibleDataAccess.cs" />
+    <Compile Include="AccesoADatos\UsoCFDIDataAccess.cs" />
+    <Compile Include="AccesoADatos\VehiculoUtilitarioDataAccess.cs" />
     <Compile Include="Servicios\Almacen\RemanenteServicio.cs" />
     <Compile Include="Servicios\Catalogos\CamionetaServicio.cs" />
     <Compile Include="Servicios\Catalogos\CombustibleServicio.cs" />
@@ -340,8 +340,8 @@
     <Compile Include="DTOs\Mobile\ReporteDiaDTO.cs" />
     <Compile Include="DTOs\Mobile\TanquesDto.cs" />
     <Compile Include="DTOs\Mobile\VentaDTO.cs" />
-    <Compile Include="Servicios\AccesoADatos\PrecioVentaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\OrdenCompraPagoDataAccess.cs" />
+    <Compile Include="AccesoADatos\PrecioVentaDataAccess.cs" />
+    <Compile Include="AccesoADatos\OrdenCompraPagoDataAccess.cs" />
     <Compile Include="Servicios\Almacen\CalcularAlmacenServicio.cs" />
     <Compile Include="DTOs\Mobile\TipoPersonaDto.cs" />
     <Compile Include="DTOs\Mobile\TipoRegimenFiscalDto.cs" />
@@ -406,34 +406,34 @@
     <Compile Include="Flujos\Seguridad.cs" />
     <Compile Include="Flujos\Ventas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Servicios\AccesoADatos\AlmacenDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\AlmacenGasDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\BancoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CentroCostoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\AlmacenGasDescargaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\ClientesDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\CuentaContableDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\EmpresaConfiguracionDA.cs" />
-    <Compile Include="Servicios\AccesoADatos\EmpresaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\EquipoTransporteDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\EstacionCarburacionDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\FormaPagoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\OperadorChoferDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\EstadoRDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\PaisDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\ProductoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\PuntoVentaDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\RegimenDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\RegimenFiscalDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\RequisicionDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\OrdenCompraDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\ProveedorDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\RolDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\TipoCentroCostoDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\TipoMedidorGasDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\TipoPerDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\TipoProveedorDataAccess.cs" />
-    <Compile Include="Servicios\AccesoADatos\UsuarioDataAccess.cs" />
+    <Compile Include="AccesoADatos\AlmacenDataAccess.cs" />
+    <Compile Include="AccesoADatos\AlmacenGasDataAccess.cs" />
+    <Compile Include="AccesoADatos\BancoDataAccess.cs" />
+    <Compile Include="AccesoADatos\CentroCostoDataAccess.cs" />
+    <Compile Include="AccesoADatos\AlmacenGasDescargaDataAccess.cs" />
+    <Compile Include="AccesoADatos\ClientesDataAccess.cs" />
+    <Compile Include="AccesoADatos\CuentaContableDataAccess.cs" />
+    <Compile Include="AccesoADatos\EmpresaConfiguracionDA.cs" />
+    <Compile Include="AccesoADatos\EmpresaDataAccess.cs" />
+    <Compile Include="AccesoADatos\EquipoTransporteDataAccess.cs" />
+    <Compile Include="AccesoADatos\EstacionCarburacionDataAccess.cs" />
+    <Compile Include="AccesoADatos\FormaPagoDataAccess.cs" />
+    <Compile Include="AccesoADatos\OperadorChoferDataAccess.cs" />
+    <Compile Include="AccesoADatos\EstadoRDataAccess.cs" />
+    <Compile Include="AccesoADatos\PaisDataAccess.cs" />
+    <Compile Include="AccesoADatos\ProductoDataAccess.cs" />
+    <Compile Include="AccesoADatos\PuntoVentaDataAccess.cs" />
+    <Compile Include="AccesoADatos\RegimenDataAccess.cs" />
+    <Compile Include="AccesoADatos\RegimenFiscalDataAccess.cs" />
+    <Compile Include="AccesoADatos\RequisicionDataAccess.cs" />
+    <Compile Include="AccesoADatos\OrdenCompraDataAccess.cs" />
+    <Compile Include="AccesoADatos\ProveedorDataAccess.cs" />
+    <Compile Include="AccesoADatos\RolDataAccess.cs" />
+    <Compile Include="AccesoADatos\TipoCentroCostoDataAccess.cs" />
+    <Compile Include="AccesoADatos\TipoMedidorGasDataAccess.cs" />
+    <Compile Include="AccesoADatos\TipoPerDataAccess.cs" />
+    <Compile Include="AccesoADatos\TipoProveedorDataAccess.cs" />
+    <Compile Include="AccesoADatos\UsuarioDataAccess.cs" />
     <Compile Include="Servicios\ActualizarSistemaServicio.cs" />
     <Compile Include="Servicios\Almacen\CalcularGasServicio.cs" />
     <Compile Include="Servicios\Almacen\ProductoAlmacenServicio.cs" />
