--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -241,7 +241,6 @@
     <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />
     <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />
     <!-- Combustible -->
-
     <!--Facturacion-->
     <add key="PostRegistrarCFDILst" value="api/facturacion/registrar/factruas" />
     <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />
@@ -250,13 +249,11 @@
     <add key="GetTicket" value="api/facturacion/buscar/ticket/" />
     <add key="GetTicketsByCliente" value="api/facturacion/buscar/tickets/cliente/" />
     <add key="GetTicketsByRFC" value="api/facturacion/buscar/tickets/rfc/" />
-
     <add key="GetCFDI" value="api/facturacion/buscar/cfdi/" />
     <add key="GetCFDIByCliente" value="api/facturacion/buscar/cfdi/cliente/" />
     <add key="GetCFDIByRFC" value="api/facturacion/buscar/cfdi/rfc/" />
     <add key="GetCFDIs" value="api/facturacion/buscar/cfdis" />
     <!--Facturacion-->
-
     <!-- HistoricoVentas -->
     <add key="PostHistoricoVentas" value="api/historico/registar/historicoventas" />
     <add key="GetHistoricoVentas" value="api/historico/consultar/historicoventas" />
@@ -272,10 +269,11 @@
     <add key="PostInventarioPorPuntoVenta" value="api/reportes/inventarioxpuntoventa" />
     <add key="PostHistorioPrecios" value="api/reportes/historicoprecios" />
     <add key="PostCallCenter" value="api/reportes/callcenter" />
-    <add key="PostRequisicion" value="api/reportes/requisicion" />
+    <add key="PostRepoRequisicion" value="api/reportes/requisicion" />
     <add key="PostOrdenCompra" value="api/reportes/ordencompra" />
     <add key="PostRendimientoVehicular" value="api/reportes/rendimientovehicular" />
     <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
+    <add key="PostCorteCaja" value="api/reportes/cortecaja"/>
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
