--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -137,6 +137,8 @@
     <Compile Include="DTOs\EquipoTransporte\AsignacionUtilitarioDTO.cs" />
     <Compile Include="DTOs\Reportes\CajaGeneral\CajaGeneralDTO.cs" />
     <Compile Include="DTOs\Reportes\CajaGeneral\RepCorteCajaDTO.cs" />
+    <Compile Include="DTOs\Reportes\GastoVehicular\GastoVehicularDTO.cs" />
+    <Compile Include="DTOs\Reportes\GastoVehicular\RepGastoVehicularDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioConcepto\InventarioXConceptoDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioConcepto\RepInventarioXConceptorDTO.cs" />
     <Compile Include="Servicios\Equipo\CalculosEquipoTrasporte.cs" />
