--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -274,6 +274,7 @@
     <add key="PostRendimientoVehicular" value="api/reportes/rendimientovehicular" />
     <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
     <add key="PostCorteCaja" value="api/reportes/cortecaja"/>
+    <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo"/>
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
