JSA - Avance DashBoard

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -357,6 +357,7 @@
     <Compile Include="Servicios\Facturacion\MetodoPagoServicio.cs" />
     <Compile Include="Servicios\Facturacion\UsoCFDIServicio.cs" />
     <Compile Include="Servicios\Historico\HistoricoVentaServicio.cs" />
+    <Compile Include="Servicios\Historico\JsonServicio.cs" />
     <Compile Include="Servicios\IngresoGasto\EgresoServicio.cs" />
     <Compile Include="Servicios\IngresoGasto\IngresoServicio.cs" />
     <Compile Include="Servicios\Mobile\AutoconsumoServicio.cs" />
