--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -173,8 +173,8 @@
     <add key="GetProductosAlmacen" value="api/almacen/buscar/productos/" />
     <add key="GetRequisiconAlmacen" value="api/almacen/buscar/almacen/requisicion/" />
     <add key="GetRegistroAlmacen" value="api/almacen/buscar/registro/" />
-    <add key="GetRemanenteGeneral" value="api/almacen/buscar/remananete/general" />
-    <add key="GetRemanentePuntoVenta" value="api/almacen/buscar/remananete/puntoventa" />
+    <add key="PostRemanenteGeneral" value="api/almacen/buscar/remanente/general" />
+    <add key="GetRemanentePuntoVenta" value="api/almacen/buscar/remanente/puntoventa" />
     <!-- Almacen -->
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
