JSA - Avance DashBoard

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -275,6 +275,7 @@
     <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
     <add key="PostCorteCaja" value="api/reportes/cortecaja"/>
     <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo"/>
+    <add key="GetDashRemanente" value="api/reportes/dashboard/remanente"/>
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
