--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -254,6 +254,7 @@
     <Compile Include="App_Code\AlmacenServicio.cs" />
     <Compile Include="App_Code\AutenticacionServicio.cs" />
     <Compile Include="App_Code\CobranzaServicio.cs" />
+    <Compile Include="App_Code\DashBoard.cs" />
     <Compile Include="App_Code\FacturacionServicio.cs" />
     <Compile Include="App_Code\HistoricoServicio.cs" />
     <Compile Include="App_Code\OrdenCompraServicio.cs" />
